--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/db/migrate/*
+/db/development.sqlite3
+/db/schema.rb
+/db/test.sqlite3
 
 # Ignore all logfiles and tempfiles.
 /log/*
